[gd_scene load_steps=12 format=3 uid="uid://c24idfsm46oni"]

[ext_resource type="Script" path="res://scenes/battle.gd" id="1_7743i"]
[ext_resource type="PackedScene" uid="uid://fyhb6ixjiv8t" path="res://scenes/enemy/enemy.tscn" id="2_6ci4s"]
[ext_resource type="PackedScene" uid="uid://cchf1y12qq15v" path="res://scenes/player/player.tscn" id="3_xkxwp"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/state_machine.gd" id="4_xj66j"]
[ext_resource type="Script" path="res://assets/classes/states/enemy_turn_state.gd" id="5_36sgr"]
[ext_resource type="Script" path="res://assets/classes/states/check_end_conditions_state.gd" id="6_bkuyh"]
[ext_resource type="Script" path="res://assets/classes/states/defeat_state.gd" id="7_waokg"]
[ext_resource type="Script" path="res://assets/classes/states/idle_state.gd" id="8_s6unc"]
[ext_resource type="Script" path="res://assets/classes/states/determine_turn_state.gd" id="9_ai8su"]
[ext_resource type="Script" path="res://assets/classes/states/player_turn_state.gd" id="9_vuhux"]
[ext_resource type="Script" path="res://assets/classes/states/victory_state.gd" id="10_wybnr"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_7743i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(1152, 648)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Enemy" parent="CanvasLayer/AspectRatioContainer" groups=["enemy"] instance=ExtResource("2_6ci4s")]
unique_name_in_owner = true
position = Vector2(772, 315)

[node name="Player" parent="CanvasLayer/AspectRatioContainer" groups=["player"] instance=ExtResource("3_xkxwp")]
unique_name_in_owner = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/AspectRatioContainer"]
layout_mode = 2

[node name="DamageNumberCanvas" type="CanvasLayer" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_xj66j")
initial_state = NodePath("PlayerTurnState")

[node name="EnemyTurnState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("5_36sgr")
actor = NodePath("../../CanvasLayer/AspectRatioContainer/Enemy")

[node name="CheckEndConditionsState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_bkuyh")
player = NodePath("../../CanvasLayer/AspectRatioContainer/Player")

[node name="DefeatState" type="Node" parent="StateMachine"]
script = ExtResource("7_waokg")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("8_s6unc")

[node name="PlayerTurnState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("9_vuhux")
actor = NodePath("../../CanvasLayer/AspectRatioContainer/Player")

[node name="VictoryState" type="Node" parent="StateMachine"]
script = ExtResource("10_wybnr")

[node name="DetermineTurnState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("9_ai8su")
player = NodePath("../../CanvasLayer/AspectRatioContainer/Player")
